--- a/webroot/css/anax-grid/structure.less
+++ b/webroot/css/anax-grid/structure.less
@@ -80,13 +80,17 @@ body {
  * Paradise style
  */
 
-html.paradise {
+html.pug {
 
 	body {
   		overflow-y: scroll;
   		background-image: url('../../img/summer.jpg');
   		background-size: cover;
   		background-attachment: fixed;
+	}
+	
+	#toolbar {
+		background: red;
 	}
  
 	#navbar {
