--- a/webroot/css/anax-grid/structure.less
+++ b/webroot/css/anax-grid/structure.less
@@ -87,10 +87,17 @@ html.pug {
   		background-image: url('../../img/summer.jpg');
   		background-size: cover;
   		background-attachment: fixed;
+  		font-family: helvetica;
 	}
 	
 	#toolbar {
-		background: red;
+		text-align: right;
+		background: lightgrey;
+	}
+	
+	.contain {
+		max-width: 960px;
+		margin: 0 auto;
 	}
  
 	#navbar {
