added register and basic question structure

--- a/webroot/css/anax-grid/style.css
+++ b/webroot/css/anax-grid/style.css
@@ -2206,14 +2206,13 @@ body {
   position: absolute;
   top: 6px;
   left: 130px;
-  font-size: 48px;
+  font-size: 68px;
 }
 .siteslogan {
   position: absolute;
-  top: 65px;
+  top: 105px;
   left: 130px;
   font-style: italic;
-  color: #666;
 }
 html.pug body {
   overflow-y: scroll;
@@ -2229,6 +2228,13 @@ html.pug #toolbar {
 html.pug .contain {
   max-width: 960px;
   margin: 0 auto;
+}
+html.pug #header {
+  background-image: url('../../img/header.jpg');
+  background-size: cover;
+  height: 150px;
+  width: 100%;
+  margin-left: 0;
 }
 html.pug #navbar {
   font-family: arial, sans-serif;
