--- a/webroot/css/anax-grid/structure.less
+++ b/webroot/css/anax-grid/structure.less
@@ -63,15 +63,14 @@ body {
   position: absolute;
   top: 6px;
   left: 130px;
-  font-size: 48px;
+  font-size: 68px;
 }
 
 .siteslogan {
   position: absolute;
-  top: 65px;
+  top: 105px;
   left: 130px;
   font-style: italic;
-  color: #666;
 }
 
 
@@ -98,6 +97,14 @@ html.pug {
 	.contain {
 		max-width: 960px;
 		margin: 0 auto;
+	}
+	
+	#header {
+		background-image: url('../../img/header.jpg');
+		background-size: cover;
+		height: 150px;
+		width: 100%;
+		margin-left: 0;
 	}
  
 	#navbar {
