--- a/webroot/css/anax-grid/navbar.less
+++ b/webroot/css/anax-grid/navbar.less
@@ -4,11 +4,12 @@
  */
 #navbar {
   margin-bottom: 44px;
+  width: 100%;
+  margin-left: 0;
 }
 
 .navbar {
-  background-color: #eee;
-  border-radius: 4px;
+  background-color: #008080;
 }
  
 .navbar ul {
@@ -20,8 +21,9 @@
 .navbar li {
   display: inline-block;
   border-top: 4px solid transparent; 
-  color: #333; 
+  color: white; 
   position: relative; 
+  font-weight: bold;
 }
  
 .navbar a {
