--- a/webroot/css/anax-grid/structure.less
+++ b/webroot/css/anax-grid/structure.less
@@ -55,21 +55,22 @@ body {
  */
 #header {
   position: relative;
-  margin-bottom: 40px;
   font-family: arial,sans-serif;
 }
 
 .sitetitle {
   position: absolute;
-  top: 6px;
-  left: 130px;
-  font-size: 68px;
+  top: 0px;
+  left: 20px;
+  font-size: 98px;
+  font-family: run;
+  color: white;
 }
 
 .siteslogan {
   position: absolute;
   top: 105px;
-  left: 130px;
+  left: 240px;
   font-style: italic;
 }
 
@@ -83,8 +84,7 @@ html.pug {
 
 	body {
   		overflow-y: scroll;
-  		background-image: url('../../img/summer.jpg');
-  		background-size: cover;
+  		background-image: url('../../img/swirl_pattern.png');
   		background-attachment: fixed;
   		font-family: helvetica;
 	}
@@ -105,6 +105,8 @@ html.pug {
 		height: 150px;
 		width: 100%;
 		margin-left: 0;
+		color: white;
+		margin-bottom: 0px;
 	}
  
 	#navbar {
