--- a/webroot/css/anax-grid/style.less
+++ b/webroot/css/anax-grid/style.less
@@ -1,3 +1,9 @@
+// Fonts
+@font-face {
+    font-family: run;
+    src: url(fonts/run.otf);
+}
+
 // Make all browsers look the same
 @import "normalize.less";
 
