--- a/webroot/css/anax-grid/navbar.less
+++ b/webroot/css/anax-grid/navbar.less
@@ -9,7 +9,7 @@
 }
 
 .navbar {
-  background-color: #008080;
+  background-color: #A34141;
 }
  
 .navbar ul {
@@ -53,7 +53,7 @@
   position: absolute; 
   left: -9999px; 
   z-index: 2;
-  background-color: #eee;
+  background-color: #A34141;
 }
  
 .navbar li li {
