--- a/webroot/css/anax-grid/style.less
+++ b/webroot/css/anax-grid/style.less
@@ -36,6 +36,8 @@
 
 @import "figure.less";
 
+@import "question_list.less";
+
 
 /** --------------------------------------------------------------
  * Test css
