--- a/webroot/css/anax-grid/question_list.less
+++ b/webroot/css/anax-grid/question_list.less
@@ -110,9 +110,21 @@
 	width: 90%;
 }
 
+.comment p {
+	display: inline;
+}
+
 // Reply
 .reply {
 	float: right;
 	display: block;
 	width: 90%;
+}
+
+textarea {
+	width: 100%;
+}
+
+.write-answer textarea {
+	height: 100px;
 }
