--- a/webroot/css/anax-grid/style.less
+++ b/webroot/css/anax-grid/style.less
@@ -38,6 +38,9 @@
 
 @import "question_list.less";
 
+//tag style
+@import "bootstrap-tagsinput.less";
+
 
 /** --------------------------------------------------------------
  * Test css
