--- a/webroot/css/anax-grid/question_list.less
+++ b/webroot/css/anax-grid/question_list.less
@@ -53,13 +53,14 @@
     left: 65px;
 }
 
-.question .tags a {
+.tags a {
 	display: inline-block;
 	background: #EFCBCB;
 	padding: 0.1em 0.5em;
 	color: #A34141;
 	border-right: 1px solid #D68080;
 	border-bottom: 1px solid #D68080;
+	text-decoration: none;
 }
 
 .tags a:HOVER {
@@ -81,6 +82,9 @@
 	text-align: center;
 	height: 100%;
 	width: 10%;
+	font-size: xx-large;
+	line-height: 1px;
+	padding-top: 0.2em;
 }
 
 .question-single .tags {
