--- a/webroot/css/anax-grid/structure.less
+++ b/webroot/css/anax-grid/structure.less
@@ -77,14 +77,14 @@ body {
 
 
 /** --------------------------------------------------------------
- * Paradise style
+ * Pug style
  */
 
 html.pug {
 
 	body {
   		overflow-y: scroll;
-  		background-image: url('../../img/swirl_pattern.png');
+  		background-image: url('../../img/pattern.png');
   		background-attachment: fixed;
   		font-family: helvetica;
 	}
@@ -92,6 +92,7 @@ html.pug {
 	#toolbar {
 		text-align: right;
 		background: lightgrey;
+		padding-right: 0.833333%;
 	}
 	
 	.contain {
@@ -114,10 +115,7 @@ html.pug {
 	}
 	
 	#wrapper {
-		border: 3px solid #E45E9D;
-		.border-radius(10px);
-		margin-top: 1em;
-		margin-bottom: 1em;
+
 	}
 	
 	.golden {
