kommer jag hinna klart?

--- a/webroot/css/anax-grid/question_list.less
+++ b/webroot/css/anax-grid/question_list.less
@@ -1,5 +1,5 @@
 .question {
-	border-bottom: 1px solid #eaeaea;
+	border-bottom: 1px solid #C2C2C2;
 	.clearfix();
 	margin-bottom: 22px;
 	position: relative;
