--- a/webroot/css/anax-grid/question_list.less
+++ b/webroot/css/anax-grid/question_list.less
@@ -40,6 +40,16 @@
 
 .user-info {
 	float: right;	
+	color: #999999;
+}
+
+.user-info a {
+	color: #A34141;
+	text-decoration: none;
+}
+
+.user-info a:hover {	
+	text-decoration: underline;
 }
 
 .user-info img {
@@ -70,11 +80,18 @@
 
 // Single question
 .question-single {
-	border-bottom: 1px solid #eaeaea;
 	.clearfix();
-	margin-bottom: 22px;
+	padding-bottom: @magicNumber;
 	position: relative;
-	color: #999999;
+}
+
+.comment a {
+	text-decoration: none;
+	color: #A34141;
+}
+	
+.comment a:hover {
+	text-decoration: underline;
 }
 
 .rating {
@@ -85,6 +102,7 @@
 	font-size: xx-large;
 	line-height: 1px;
 	padding-top: 0.2em;
+	color: #818185;
 }
 
 .question-single .tags {
@@ -112,10 +130,23 @@
 	float: right;
 	display: block;
 	width: 90%;
+	font-size: smaller;
+	border-top: 1px solid #C2C2C2;
 }
 
 .comment p {
 	display: inline;
+}
+
+// answer 
+.order-answers {
+	float: right;
+}
+
+.answer {
+	margin-bottom: @magicNumber;
+	border-bottom: 1px solid #C2C2C2;
+	padding-bottom: @magicNumber;
 }
 
 // Reply
@@ -123,6 +154,15 @@
 	float: right;
 	display: block;
 	width: 90%;
+	border-top: 1px solid #C2C2C2;
+}
+
+.reply a {
+	color: #A34141;
+}
+
+.reply a:hover {
+	text-decoration: none;
 }
 
 textarea {
@@ -131,4 +171,29 @@ textarea {
 
 .write-answer textarea {
 	height: 100px;
+}
+
+.write-answer h3 {
+	margin-bottom: 0;
+}
+
+//answers header
+.answers header {
+	border-bottom: 1px solid #C2C2C2;
+	margin-bottom: @magicNumber;
+}
+
+.ask-button {
+	background: #A34141;
+	text-align: center;
+	padding: 0.5em;
+}
+
+.ask-button a {
+	color: white;
+	text-decoration: none;
+}
+
+.ask-button:hover{
+	background: #D68080;
 }
