--- a/webroot/css/anax-grid/navbar.less
+++ b/webroot/css/anax-grid/navbar.less
@@ -44,7 +44,7 @@
 .navbar li.selected-parent, 
 .navbar li.selected {
   color: #222; 
-  border-color:  #E45E9D;
+  border-color:  #333333;
 }
 
 .navbar ul ul {
